# infotecs_r-d

./: CMakeLists.txt  TZ-Stazhyer-otdela-tekhnologicheskikh-issledovaniy-_RnD_-SPb.docx  comms.txt  main.cpp  test_2.pcap  utils.cpp  utils.h
Pcaps/: packets.pcap  packets1.pcap  test.pcap  test_1.pcap  test_packets.pcap  test_packets_1.pcap
